--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -430,5 +430,8 @@
   "Hidden assets": "Hidden assets",
   "Here is the list of assets you are hiding": "Here is the list of assets you are hiding",
   "Add an asset to hide": "Add an asset to hide",
-  "No assets are hidden": "No assets are hidden"
+  "No assets are hidden": "No assets are hidden",
+  "Asset to hide": "Asset to hide",
+  "Asset hidden": "Asset hidden",
+  "Asset unhidden": "Asset unhidden"
 }
