--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -426,7 +426,7 @@
   "Removed from favorites": "Removed from favorites",
   "Favorites": "Favorites",
   "No dApps added to your favorites yet": "No dApps added to your favorites yet",
-  "Hide assets your are not interested in": "Hide assets your are not interested in",
+  "Hide assets you're not interested in": "Hide assets you're not interested in",
   "Hidden assets": "Hidden assets",
   "Here is the list of assets you are hiding": "Here is the list of assets you are hiding",
   "Add an asset to hide": "Add an asset to hide",
@@ -434,6 +434,6 @@
   "Asset to hide": "Asset to hide",
   "Asset hidden": "Asset hidden",
   "Asset unhidden": "Asset unhidden",
-  "nb_of_hidden_assets_one": "One hidden asset",
+  "nb_of_hidden_assets_one": "{{ count }} hidden asset",
   "nb_of_hidden_assets_other": "{{ count }} hidden assets"
 }
