--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -445,5 +445,7 @@
   "You already have a contact with this address": "You already have a contact with this address",
   "See address details": "See address details",
   "Select address": "Select address",
-  "Creating contacts helps you avoid making mistakes and manage your funds with ease.": "Creating contacts helps you avoid making mistakes and manage your funds with ease."
+  "Creating contacts helps you avoid making mistakes and manage your funds with ease.": "Creating contacts helps you avoid making mistakes and manage your funds with ease.",
+  "nfts_in_addresses_one": "{{ count }} NFT",
+  "nfts_in_addresses_other": "{{ count }} NFTs"
 }
