--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -442,5 +442,7 @@
   "Hide asset": "Hide asset",
   "Show details": "Show details",
   "Scanned address": "Scanned address",
-  "You already have a contact with this address": "You already have a contact with this address"
+  "You already have a contact with this address": "You already have a contact with this address",
+  "See address details": "See address details",
+  "Select address": "Select address"
 }
