Add intro text and compact button in new contact

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -444,5 +444,6 @@
   "Scanned address": "Scanned address",
   "You already have a contact with this address": "You already have a contact with this address",
   "See address details": "See address details",
-  "Select address": "Select address"
+  "Select address": "Select address",
+  "Creating contacts helps you avoid making mistakes and manage your funds with ease.": "Creating contacts helps you avoid making mistakes and manage your funds with ease."
 }
