--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -449,5 +449,6 @@
   "nfts_in_addresses_one": "{{ count }} NFT",
   "nfts_in_addresses_other": "{{ count }} NFTs",
   "Did you know?": "Did you know?",
-  "Splitting your funds into multiple addresses can help you stay organized and increase privacy.": "Splitting your funds into multiple addresses can help you stay organized and increase privacy."
+  "Splitting your funds into multiple addresses can help you stay organized and increase privacy.": "Splitting your funds into multiple addresses can help you stay organized and increase privacy.",
+  "No dApps match your search: \"{{ searchText }}\"": "No dApps match your search: \"{{ searchText }}\""
 }
