Add region settings in mobile wallet
Related to #128

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -453,5 +453,7 @@
   "Did you know?": "Did you know?",
   "Splitting your funds into multiple addresses can help you stay organized and increase privacy.": "Splitting your funds into multiple addresses can help you stay organized and increase privacy.",
   "No dApps match your search: \"{{ searchText }}\"": "No dApps match your search: \"{{ searchText }}\"",
-  "Visit dApp": "Visit dApp"
+  "Visit dApp": "Visit dApp",
+  "Region": "Region",
+  "Choose your region to update formats of dates, time, and currencies.": "Choose your region to update formats of dates, time, and currencies."
 }
