Display tx and fee worth before sending tx

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -408,6 +408,8 @@
   "Loading your balances...": "Loading your balances...",
   "Wallet worth": "Wallet worth",
   "Address worth": "Address worth",
+  "Total worth": "Total worth",
+  "less than": "less than",
   "Forget address": "Forget address",
   "Address forgotten": "Address forgotten",
   "Disconnecting": "Disconnecting",
