Add link to Alph.land
Closes #1212

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -453,5 +453,6 @@
   "Did you know?": "Did you know?",
   "Splitting your funds into multiple addresses can help you stay organized and increase privacy.": "Splitting your funds into multiple addresses can help you stay organized and increase privacy.",
   "No dApps match your search: \"{{ searchText }}\"": "No dApps match your search: \"{{ searchText }}\"",
-  "Visit dApp": "Visit dApp"
+  "Visit dApp": "Visit dApp",
+  "More details on Alph.land": "More details on Alph.land"
 }
