Replace bytecode section with copy button

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -120,6 +120,8 @@
   "Saving": "Saving",
   "Saved!": "Saved!",
   "Copy address": "Copy address",
+  "Copy": "Copy",
+  "Bytecode copied": "Bytecode copied",
   "Paste": "Paste",
   "Edit": "Edit",
   "Share": "Share",
