Create basic tokens details modal

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -527,5 +527,6 @@
   "Unlock a wallet to connect to the dApp.": "Unlock a wallet to connect to the dApp.",
   "Activity": "Activity",
   "Passphrase warning": "Passphrase warning",
-  "Don't use passphrase": "Don't use passphrase"
+  "Don't use passphrase": "Don't use passphrase",
+  "Token balance": "Token balance"
 }
