Add hidden assets list in address details modal
Related to #73

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -532,6 +532,6 @@
   "Hide asset": "Hide asset",
   "nb_of_hidden_assets_one": "{{ count }} hidden asset",
   "nb_of_hidden_assets_other": "{{ count }} hidden assets",
-  "Hide assets": "Hide assets",
+  "Close hidden assets list": "Close hidden assets list",
   "Unhide asset": "Unhide asset"
 }
