Bold amount in Verify screen + simpler label

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -460,5 +460,6 @@
   "Visit dApp": "Visit dApp",
   "Region": "Region",
   "Choose your region to update formats of dates, time, and currencies.": "Choose your region to update formats of dates, time, and currencies.",
-  "More details on Alph.land": "More details on Alph.land"
+  "More details on Alph.land": "More details on Alph.land",
+  "Worth": "Worth"
 }
