Polish group labeling UI

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -461,5 +461,6 @@
   "Region": "Region",
   "Choose your region to update formats of dates, time, and currencies.": "Choose your region to update formats of dates, time, and currencies.",
   "More details on Alph.land": "More details on Alph.land",
-  "Worth": "Worth"
+  "Worth": "Worth",
+  "Group": "Group"
 }
