Update asset amounts input text styles

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -361,7 +361,7 @@
   "Unselect all": "Unselect all",
   "Update": "Update",
   "Use an existing wallet": "Use an existing wallet",
-  "Use max amount": "Use max amount",
+  "use_max_amount": "Use max",
   "Use optional passphrase": "Use optional passphrase",
   "Useful for miners or DeFi use.": "Useful for miners or DeFi use.",
   "Version": "Version",
