--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -321,6 +321,7 @@
   "The group number will be automatically be appended to the addresses’ label.": "The group number will be automatically be appended to the addresses’ label.",
   "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})",
   "The wallet is offline.": "The wallet is offline.",
+  "offline": "offline",
   "Theme": "Theme",
   "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.": "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.",
   "There are no available addresses.": "There are no available addresses.",
