Sort addresses by index
Closes #1120

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -6,6 +6,7 @@
   "Address details": "Address details",
   "Address group": "Address group",
   "Address label": "Address label",
+  "Address index": "Address index",
   "Address NFTs": "Address NFTs",
   "Address options": "Address options",
   "Address tokens": "Address tokens",
