Catch getHumanReadableError exception in dapp list

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -464,5 +464,6 @@
   "More details on Alph.land": "More details on Alph.land",
   "Worth": "Worth",
   "Group": "Group",
-  "These tokens in your wallet do not respect the Alephium token standards. No information about them could be found.": "These tokens in your wallet do not respect the Alephium token standards. No information about them could be found."
+  "These tokens in your wallet do not respect the Alephium token standards. No information about them could be found.": "These tokens in your wallet do not respect the Alephium token standards. No information about them could be found.",
+  "Unknown error": "Unknown error"
 }
