Support displaying groupless addresses

--- a/apps/explorer/locales/en-US/translation.json
+++ b/apps/explorer/locales/en-US/translation.json
@@ -137,5 +137,6 @@
   "Unsupported media type": "Unsupported media type",
   "Video thumbnail": "Video thumbnail",
   "No media": "No media",
-  "Address worth": "Address worth"
+  "Address worth": "Address worth",
+  "Groupless": "Groupless"
 }
