Allow navigation between main / sub addresses

--- a/apps/explorer/locales/en-US/translation.json
+++ b/apps/explorer/locales/en-US/translation.json
@@ -138,5 +138,8 @@
   "Video thumbnail": "Video thumbnail",
   "No media": "No media",
   "Address worth": "Address worth",
-  "Groupless": "Groupless"
+  "Groupless": "Groupless",
+  "Go to parent address": "Go to parent address",
+  "Sub-address group": "Sub-address group",
+  "Sub-addresses_one": "Sub-address"
 }
