--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -473,5 +473,8 @@
   "Remove all connections": "Remove all connections",
   "WalletConnect connection unexpectedly dropped.": "WalletConnect connection unexpectedly dropped.",
   "Please, refresh {{ dAppUrl }}.": "Please, refresh {{ dAppUrl }}.",
-  "WalletConnect cache cleared": "WalletConnect cache cleared"
+  "WalletConnect cache cleared": "WalletConnect cache cleared",
+  "Temporarily unavailable data": "Temporarily unavailable data",
+  "We are working on addressing this issue. Please try again later.": "We are working on addressing this issue. Please try again later.",
+  "Error details": "Error details"
 }
