Sign messages and unsigned txs

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -122,7 +122,7 @@
   "Saved!": "Saved!",
   "Copy address": "Copy address",
   "Copy": "Copy",
-  "Bytecode copied": "Bytecode copied",
+  "Copied": "Copied",
   "Paste": "Paste",
   "Edit": "Edit",
   "Share": "Share",
