Fix loading animations

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -92,7 +92,7 @@
   "Connect to dApp": "Connect to dApp",
   "Connect to dApps": "Connect to dApps",
   "Switch network": "Switch network",
-  "Welcome to {{ networkName }}!": "Welcome to {{ networkName }}!",
+  "Switching networks": "Switching networks",
   "Approve": "Approve",
   "Decline": "Decline",
   "Accept": "Accept",
