Adjust sign tx modals

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -511,7 +511,7 @@
   "Plug in and unlock your Ledger device.": "Plug in and unlock your Ledger device.",
   "ledgerInstructionsOpenApp": "Open the Alephium Ledger app. The Alephium app can be installed via <1>Ledger Live</1>.",
   "Is your device plugged in and the Alephium app open?": "Is your device plugged in and the Alephium app open?",
-  "Please, confirm the transaction on your Ledger.": "Please, confirm the transaction on your Ledger.",
+  "Please, check your Ledger.": "Please, check your Ledger.",
   "Welcome to your Ledger!": "Welcome to your Ledger!",
   "Would you like to scan for active addresses?": "Would you like to scan for active addresses?",
   "Scan": "Scan",
