Move function to shared

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -536,5 +536,6 @@
   "No transactions before {{ date }}": "No transactions before {{ date }}",
   "Sort by": "Sort by",
   "ALPH balance": "ALPH balance",
-  "Approve": "Approve"
+  "Approve": "Approve",
+  "Chained transactions": "Chained transactions"
 }
