Support chained txs in DW
Closes #1084

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -537,5 +537,8 @@
   "Sort by": "Sort by",
   "ALPH balance": "ALPH balance",
   "Approve": "Approve",
-  "Chained transactions": "Chained transactions"
+  "Chained transactions": "Chained transactions",
+  "Transaction {{ number }}": "Transaction {{ number }}",
+  "Ledger does not yet support chained transactions. We are working on it!": "Ledger does not yet support chained transactions. We are working on it!",
+  "Not supported": "Not supported"
 }
