Fund address with missing gas from another address (DW)
Related to #1407

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -540,5 +540,6 @@
   "Chained transactions": "Chained transactions",
   "Transaction {{ number }}": "Transaction {{ number }}",
   "Ledger does not yet support chained transactions. We are working on it!": "Ledger does not yet support chained transactions. We are working on it!",
-  "Not supported": "Not supported"
+  "Not supported": "Not supported",
+  "Your address is missing some ALPH for gas fees but thankfully another address can cover it!": "Your address is missing some ALPH for gas fees but thankfully another address can cover it!"
 }
