--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -483,5 +483,5 @@
   "Useful tip": "Useful tip",
   "connectTipModalMessage": "For a smoother experience when connecting to a dApp, use the <1>Browser/Extension</1> button instead of WalletConnect.",
   "Transaction {{ number }}": "Transaction {{ number }}",
-  "Your address is missing some ALPH for gas fees but thankfully another address can cover it!": "Your address is missing some ALPH for gas fees but thankfully another address can cover it!"
+  "The origin address doesn't have enough ALPH for gas fees. But don't you worry, {{ amount }} ALPH will be automatically transferred from another address in your wallet!": "The origin address doesn't have enough ALPH for gas fees. But don't you worry, {{ amount }} ALPH will be automatically transferred from another address in your wallet!"
 }
