Add new "Group transfer" tx info label

--- a/apps/explorer/locales/en-US/translation.json
+++ b/apps/explorer/locales/en-US/translation.json
@@ -140,5 +140,6 @@
   "Group": "Group",
   "Group(s)": "Group(s)",
   "All": "All",
-  "Group {{ number }}": "Group {{ number }}"
+  "Group {{ number }}": "Group {{ number }}",
+  "Group transfer": "Group transfer"
 }
