--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -51,7 +51,6 @@
   "Change wallet name": "Change wallet name",
   "Check": "Check",
   "Choose a contact": "Choose a contact",
-  "Click to deactivate discreet mode": "Click to deactivate discreet mode",
   "Click to see less": "Click to see less",
   "Click to see more": "Click to see more",
   "Close": "Close",
@@ -542,5 +541,6 @@
   "Ledger does not yet support chained transactions. We are working on it!": "Ledger does not yet support chained transactions. We are working on it!",
   "Not supported": "Not supported",
   "The origin address doesn't have enough ALPH for gas fees. But don't you worry, {{ amount }} ALPH will be automatically transferred from another address in your wallet!": "The origin address doesn't have enough ALPH for gas fees. But don't you worry, {{ amount }} ALPH will be automatically transferred from another address in your wallet!",
-  "Leave this setting off to generate a groupless address (recommended). If you specifically need an address in a dedicated group, you can select it below.": "Leave this setting off to generate a groupless address (recommended). If you specifically need an address in a dedicated group, you can select it below."
+  "Leave this setting off to generate a groupless address (recommended). If you specifically need an address in a dedicated group, you can select it below.": "Leave this setting off to generate a groupless address (recommended). If you specifically need an address in a dedicated group, you can select it below.",
+  "Click to display the amount": "Click to display the amount"
 }
