Differentiate between node and EB status
Related to #860

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -319,7 +319,12 @@
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
   "The group number will be automatically be appended to the addresses’ label.": "The group number will be automatically be appended to the addresses’ label.",
   "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})",
-  "The wallet is offline.": "The wallet is offline.",
+  "Degraded experience": "Degraded experience",
+  "There is an issue connecting to the node and explorer backend servers.": "There is an issue connecting to the node and explorer backend servers.",
+  "We apologize for the inconvenience.": "We apologize for the inconvenience.",
+  "The explorer backend is offline. You can still see your balances and send transactions but some data might be missing.": "The explorer backend is offline. You can still see your balances and send transactions but some data might be missing.",
+  "The node is offline. You can see your balances but you cannot send transactions.": "The node is offline. You can see your balances but you cannot send transactions.",
+  "offlineModalStatusPageMessage": "Check your network settings and the <1>Status page</1> for updates on this issue.",
   "offline": "offline",
   "Theme": "Theme",
   "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.": "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.",
