Show offline messages in mobile wallet
Related to #860

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -254,7 +254,11 @@
   "backupModalMessage1": "The first and most important step is to <1>write down your secret recovery phrase</1> and store it in a safe place.",
   "backupModalMessage2": "Have peace of mind by verifying that you <1>wrote your secret recovery phrase down</1> correctly.",
   "Reconnecting": "Reconnecting",
-  "The app is offline and trying to reconnect. Please, check your network settings.": "The app is offline and trying to reconnect. Please, check your network settings.",
+  "There is an issue connecting to the node and explorer backend servers.": "There is an issue connecting to the node and explorer backend servers.",
+  "We apologize for the inconvenience.": "We apologize for the inconvenience.",
+  "The explorer backend is offline. You can still see your balances and send transactions but some data might be missing.": "The explorer backend is offline. You can still see your balances and send transactions but some data might be missing.",
+  "The node is offline. You can see your balances but you cannot send transactions.": "The node is offline. You can see your balances but you cannot send transactions.",
+  "offlineModalStatusPageMessage": "Check your network settings and the <1>Status page</1> for updates on this issue.",
   "Scan for active addresses": "Scan for active addresses",
   "Scan QR code": "Scan QR code",
   "Scan an Alephium address QR code": "Scan an Alephium address QR code",
