--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -203,6 +203,8 @@
   "More options": "More options",
   "More to come...": "More to come...",
   "Moved": "Moved",
+  "Self transfer": "Self transfer",
+  "Group transfer": "Group transfer",
   "Name": "Name",
   "Network": "Network",
   "Network ID": "Network ID",
