--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -203,6 +203,7 @@
   "More options": "More options",
   "More to come...": "More to come...",
   "Moved": "Moved",
+  "Airdrop": "Airdrop",
   "Self transfer": "Self transfer",
   "Group transfer": "Group transfer",
   "Name": "Name",
