--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -23,6 +23,7 @@
   "Sending": "Sending",
   "Sent": "Sent",
   "Swapped": "Swapped",
+  "Airdrop": "Airdrop",
   "Self transfer": "Self transfer",
   "Group transfer": "Group transfer",
   "and": "and",
