--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -417,6 +417,7 @@
   "Could not find chain requirements in WalletConnect proposal": "Could not find chain requirements in WalletConnect proposal",
   "Decline": "Decline",
   "Switch network": "Switch network",
+  "Network mismatch": "Network mismatch",
   "Generate new address": "Generate new address",
   "Connect with address": "Connect with address",
   "Select an address to connect with.": "Select an address to connect with.",
