Display simulated execute script tx result in mw
Closes #788

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -152,7 +152,8 @@
   "Initial amount": "Initial amount",
   "Issue token amount": "Issue token amount",
   "Bytecode": "Bytecode",
-  "Unsigned TX ID": "Unsigned TX ID",
+  "Simulated result": "Simulated result",
+  "Call contract": "Call contract",
   "Unsigned TX": "Unsigned TX",
   "Message": "Message",
   "Fast": "Fast",
