Revert "Remove group selection in new address screen"
This reverts commit b55b31508d29e3938085891913f9630fb7b5151f.

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -89,6 +89,7 @@
   "Addresses in group {{ groupNumber }}": "Addresses in group {{ groupNumber }}",
   "Your addresses": "Your addresses",
   "Address settings": "Address settings",
+  "Address group": "Address group",
   "Contacts": "Contacts",
   "No contact yet!": "No contact yet!",
   "Add contact": "Add contact",
@@ -137,6 +138,7 @@
   "New contact": "New contact",
   "Importing wallet": "Importing wallet",
   "dAppRequiredNetwork": "You are currently connected to <1>{{ currentNetwork }}</1>, but the dApp requires a connection to <1>{{ requiredNetwork }}</1>.",
+  "dAppRequiredGroup": "The dApp asks for an address in group <1>{{ group }}</1>. Click below to generate one!",
   "Tap to select another one": "Tap to select another one",
   "Connect with address": "Connect with address",
   "Tap to change the address to connect with.": "Tap to change the address to connect with.",
