--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -553,5 +553,6 @@
   "Leave this setting off to generate a groupless address (recommended). If you specifically need an address in a dedicated group, you can select it below.": "Leave this setting off to generate a groupless address (recommended). If you specifically need an address in a dedicated group, you can select it below.",
   "Click to display the amount": "Click to display the amount",
   "Sending": "Sending",
-  "Simulated result": "Simulated result"
+  "Simulated result": "Simulated result",
+  "Nothing relevant to the signer address.": "Nothing relevant to the signer address."
 }
